@@ -12,6 +12,8 @@
 07/11/2023 TWAIN32_FIND implementation in 32bitServer; IPC_FindSource in Twain Taker
 08/11/2023 Captured Images Icon of Image not Found; First Release Full Test
 10/11/2023 Retry for Scanner not Found; Refresh in TwainSelectSource
+15/11/2023 MSG_TWAIN32_USERINTERFACE in 32bit Server; Animation in Acquire; Test cleaned and renamed
+29/11/2023 Twain First Tests with PaperSizes and Resolution
 
 
 
